Thu Dec  4 23:11:23 CET 2008 Christian Anthon <anthon@kiku.dk>

	* file.c, gnubg.c, gtkcube.c, gtkgamelist.c: more minor memory errors

Wed Dec  3 12:06:57 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtktheory.c: remove missed debug stuff

Wed Dec  3 11:51:33 CET 2008 Christian Anthon <anthon@kiku.dk>

	* dice.c, dice.h, gnubg.c: free gmp random data
	* gtkboard.c: init bd->cube and remove unused widget from board_init
	* gtkgame.c: the list returned by gtk_container_get_children should be
	freed
	* gtkgamelist.c: widget destroy doesn't work (gtk bug)
	* gtkprefs.c: free the xml parser context
	* gtkwindows.c: we cannot rely on the response cb to free the data as
	the widget may be destroyed in other ways
	* board3d/drawboard3d.c, board3d/misc3d.c: simple frees

Tue Dec  2 01:19:31 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gnubgmodule.c, gnubgmodule.h: Py_SetProgramname should be
	parsed argv[0];
	* gtkboard.c: init bd->turn to avoid a warning from valgrind
	* gtktheory.c: small memory leak caused by missing g_objec_unref

Mon Dec  1 23:07:43 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtktempmap.c: make "show equities" more readable

Sun Sep 29 19:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, flags/spain.png: add a spanish flag

Mon Nov 24 17:07:00 CET 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, po/es.po: add es translation

Sat Nov 15 23:32:42 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubgstock.c, gnubgstock.h, gtkgame.c, gtktoolbar.c,
	pixmaps/Makefile.am, pixmaps/gnubg-stock-pixbufs.h,
	pixmaps/16x16/actions/resign_16.png,
	pixmaps/24x24/actions/hint_16.png,
	pixmaps/24x24/actions/resign_24.png, xpm/resign.xpm: Make a stock item
	of the resign xpm

Tue Nov 11 23:39:30 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkboard.c, gtkboard.h: fix two minor bugs causing crashes
	on closing

Tue Nov 11 11:59:52 CET 2008 Christian Anthon <anthon@kiku.dk>
